--- a/supervise.cabal
+++ b/supervise.cabal
@@ -14,4 +14,5 @@ library
   hs-source-dirs:  src
   build-depends:       base >=4.7 && <4.8
                      , async 
+                     , transformers
   default-language:    Haskell2010
