--- a/supervise.cabal
+++ b/supervise.cabal
@@ -11,6 +11,7 @@ cabal-version:       >=1.10
 
 library 
   exposed-modules: Concurrency.Supervise        
+  ghc-options: -threaded
   hs-source-dirs:  src
   build-depends:       base >=4.7 && <4.8
                      , async 
