--- a/supervise.cabal
+++ b/supervise.cabal
@@ -2,6 +2,7 @@ name:                supervise
 version:             0.1.0.0
 synopsis:            Spawn n threads, handle their results cleanly
 description:         Spawn n threads, handle their results cleanly
+license:             BSD3
 license-file:        LICENSE
 author:              David Johnson
 maintainer:          djohnson.m@gmail.com
@@ -10,10 +11,9 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library 
-  exposed-modules: Concurrency.Supervise        
-  ghc-options: -threaded
-  hs-source-dirs:  src
-  build-depends:       base >=4.7 && <4.8
-                     , async 
-                     , transformers
-  default-language:    Haskell2010
+  exposed-modules:    Concurrency.Supervise        
+  hs-source-dirs:     src
+  build-depends:      base >=4.7 && <4.8
+                    , async 
+                    , transformers
+  default-language:   Haskell2010
