--- a/supervise.cabal
+++ b/supervise.cabal
@@ -17,3 +17,7 @@ library
                     , async 
                     , transformers
   default-language:   Haskell2010
+
+source-repository head
+  type: git
+  location: https://github.com/dmjio/supervise                  
