--- a/supervise.cabal
+++ b/supervise.cabal
@@ -1,7 +1,7 @@
 name:                supervise
 version:             0.1.0.0
 synopsis:            Spawn n threads, handle their results cleanly
-description:         Spawn n threads, handle their results cleanly
+description:         Facilitate the spawning, maintenance and resolution of asynchronous operations running concurrently
 license:             BSD3
 license-file:        LICENSE
 author:              David Johnson
